# SynthesAI

./: .gitignore  AGENT_INTEGRATION_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  NAMING_CONVENTIONS.md  README.md  RENAME_GUIDE.md  __init__.py  pyproject.toml  test_frame_extraction.py  test_frame_extractor.py  test_log.txt  test_video_summary_simple.py
.claude/: settings.local.json
.claude/skills/: bilibili-qr.md  synthesai.md
config/: adapters.yaml  modules.yaml  server.yaml  settings.local.yaml.example  settings.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: AGENT_DEVELOPMENT_GUIDE.md  AGENT_DOCUMENTATION_INDEX.md  AGENT_ENGINEER_ANALYSIS_REPORT.md  API_EXAMPLES.md  API_KEY_SETUP.md  ARCHITECTURE_OVERVIEW.md  BEST_PRACTICES.md  CONFIGURATION.md  COOKIE_AUTHENTICATION.md  DEVELOPMENT.md  QUICK_START.md  SYNTHESAI_BRAND_APPLICATION_SUMMARY.md  SYNTHESAI_BRAND_GUIDE.md  agent_integration.md  api.md  batch_processing_progress.md  day1_completion_summary.md  demo_examples.md  development_options_v0.3.md  faq.md  format_comparison_example.html  frame_extraction_completion_summary.md  frame_extraction_usage_examples.md  github_release_v0.1.0.md  knowledge_card_prompt_update.md  link_learning_cli_guide.md  link_learning_completion_summary.md  link_learning_design.md  link_learning_implementation_summary.md  link_learning_user_guide.md  next_step_planning.md  plugin-development.md  project_status_current.md  project_status_summary.md  project_summary_20260410.md  test_fix_report_20260410.md  test_results_final_20260410.md  test_results_summary_20260410.md  test_strategy.md  user-guide.md  (+3 more)
downloaders/: bilibili_downloader.py
examples/: README.md  basic_usage.py  batch_processing.py  batch_processing_examples.py  learning_workflow.py
services/: bilibili_api.py
skills/: DESCRIPTION.md  README.md
skills/learning-history/: SKILL.md
skills/link-learning/: SKILL.md
skills/list-skills/: SKILL.md
skills/synthesai/: SKILL.md
skills/video-summary/: SKILL.md
skills/video-summary/references/: api-guide.md
skills/vocabulary/: SKILL.md
src/learning_assistant/: __init__.py  cli.py
src/learning_assistant/adapters/: __init__.py  test_validation_adapter.py
src/learning_assistant/adapters/feishu/: __init__.py  _base.py  adapter.py  doc_client.py  document_builder.py  mindmap_client.py  models.py  plugin.yaml  whiteboard_client.py  wiki_client.py
src/learning_assistant/api/: __init__.py  agent_api.py  convenience.py  exceptions.py  helpers.py  schemas.py
src/learning_assistant/auth/: __init__.py  base.py  cookie_manager.py  models.py  qr_display.py
src/learning_assistant/auth/providers/: __init__.py  bilibili.py  douyin.py
src/learning_assistant/core/: __init__.py  base_adapter.py  base_module.py  config_manager.py  event_bus.py  history_manager.py  plugin_manager.py  prompt_manager.py  prompt_template.py  task_manager.py
src/learning_assistant/core/batch/: __init__.py  batch_manager.py  resource_monitor.py  task_queue.py
src/learning_assistant/core/exporters/: __init__.py  base.py  knowledge_card.py  markdown.py  pdf.py  visual_card.py
src/learning_assistant/core/llm/: __init__.py  base.py  service.py
src/learning_assistant/core/publishing/: __init__.py  models.py
src/learning_assistant/core/services/: __init__.py  content_fetcher.py  content_parser.py
src/learning_assistant/mcp/: __init__.py  server.py
src/learning_assistant/modules/link_learning/: __init__.py  content_fetcher.py  content_parser.py  models.py  plugin.yaml
src/learning_assistant/modules/video_summary/: __init__.py  audio_extractor.py  bilibili_downloader.py  downloader.py  frame_extractor.py  plugin.yaml
src/learning_assistant/modules/vocabulary/: __init__.py  models.py  phonetic_lookup.py  plugin.yaml  story_generator.py  visual_adapter.py  vocabulary_card_generator.py  vocabulary_card_template_v2.html  word_extractor.py
src/learning_assistant/server/: __init__.py  config.py  context.py  main.py  middleware.py  task_manager.py
src/learning_assistant/server/routes/: __init__.py  auth.py  link.py  (+6 more)
src/learning_assistant/utils/: __init__.py  log_sanitization.py  validation.py
templates/outputs/: link_summary.md  video_summary.md  vocabulary_card.md
templates/prompts/: context_story.yaml  link_summary.yaml  video_summary.yaml  vocabulary_extraction.yaml
tests/: test_cli.py
tests/adapters/: __init__.py  test_feishu_adapter.py  test_feishu_document_builder.py  test_test_adapters.py
tests/api/: test_api.py
tests/auth/: test_bilibili_auth.py
tests/core/: adapter_test_framework.py  test_base_adapter.py  test_config_manager.py  test_event_bus.py  test_history_manager.py  test_llm_service.py  test_markdown_exporter.py  test_plugin_manager.py  test_prompt_manager.py  test_prompt_template.py  test_task_manager.py
tests/core/batch/: test_task_queue.py
tests/integration/: __init__.py  test_core_integration.py
tests/modules/: __init__.py  test_asr_data.py  test_audio_extractor.py  test_audio_transcriber.py  test_bcut_asr.py  test_downloader.py  test_frame_extractor.py  test_video_summary_module.py
tests/modules/link_learning/: __init__.py  test_content_fetcher_extended.py  test_content_parser_extended.py  test_integration.py  test_link_learning.py  test_module_extended.py
tests/modules/vocabulary/: __init__.py  test_models.py  test_module.py  test_phonetic_lookup.py  test_story_generator.py  test_visual_adapter.py  test_word_extractor.py
tests/server/: __init__.py  test_routes.py
tests/utils/: test_log_sanitization.py  test_validation.py
webui/: .gitignore  DESIGN.md  Dockerfile.webui  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webui/src/: App.tsx  vite-env.d.ts
webui/src/hooks/: useLocalStorage.ts  useTaskPolling.ts
webui/src/pages/: ConfigPage.tsx  DashboardPage.tsx  HistoryPage.tsx  LinkPage.tsx  LoginPage.tsx  SettingsPage.tsx  StatisticsPage.tsx  VideoPage.tsx  VocabularyPage.tsx
webui/src/services/: api.ts
webui/src/styles/: globals.css
webui/src/utils/: export.ts
(+13 files in other folders)
